2012-09-07  Earnie Boyd  <earnie@users.sourceforge.net>

	Manual resolution for LICENSE for files already containing a file
	preamble as appropriate.

	* src/libcrt/complex/cacos.c: Remove or modify the existing file
	preamble.
	* src/libcrt/complex/cacosf.c: Ditto.
	* src/libcrt/complex/cacosh.c: Ditto.
	* src/libcrt/complex/cacoshf.c: Ditto.
	* src/libcrt/complex/cacoshl.c: Ditto.
	* src/libcrt/complex/casin.c: Ditto.
	* src/libcrt/complex/casinf.c: Ditto.
	* src/libcrt/complex/casinh.c: Ditto.
	* src/libcrt/complex/casinhf.c: Ditto.
	* src/libcrt/complex/casinhl.c: Ditto.
	* src/libcrt/complex/casinl.c: Ditto.
	* src/libcrt/complex/catan.c: Ditto.
	* src/libcrt/complex/catanf.c: Ditto.
	* src/libcrt/complex/catanh.c: Ditto.
	* src/libcrt/complex/catanhf.c: Ditto.
	* src/libcrt/complex/catanhl.c: Ditto.
	* src/libcrt/complex/catanl.c: Ditto.
	* src/libcrt/complex/ccos.c: Ditto.
	* src/libcrt/complex/ccosh.c: Ditto.
	* src/libcrt/complex/ccoshf.c: Ditto.
	* src/libcrt/complex/ccoshl.c: Ditto.
	* src/libcrt/complex/ccosl.c: Ditto.
	* src/libcrt/complex/cexp.c: Ditto.
	* src/libcrt/complex/cexpf.c: Ditto.
	* src/libcrt/complex/cexpl.c: Ditto.
	* src/libcrt/complex/clog.c: Ditto.
	* src/libcrt/complex/clogf.c: Ditto.
	* src/libcrt/complex/clogl.c: Ditto.
	* src/libcrt/complex/cpow.c: Ditto.
	* src/libcrt/complex/cpowf.c: Ditto.
	* src/libcrt/complex/cpowl.c: Ditto.
	* src/libcrt/complex/cproj.c: Ditto.
	* src/libcrt/complex/cprojf.c: Ditto.
	* src/libcrt/complex/cprojl.c: Ditto.
	* src/libcrt/complex/csin.c: Ditto.
	* src/libcrt/complex/csinf.c: Ditto.
	* src/libcrt/complex/csinh.c: Ditto.
	* src/libcrt/complex/csinhf.c: Ditto.
	* src/libcrt/complex/csinhl.c: Ditto.
	* src/libcrt/complex/csinl.c: Ditto.
	* src/libcrt/complex/csqrt.c: Ditto.
	* src/libcrt/complex/csqrtl.c: Ditto.
	* src/libcrt/complex/ctan.c: Ditto.
	* src/libcrt/complex/ctanf.c: Ditto.
	* src/libcrt/complex/ctanh.c: Ditto.
	* src/libcrt/complex/ctanhf.c: Ditto.
	* src/libcrt/complex/ctanhl.c: Ditto.